# location-status

./: Makefile.am  README.md  configure.ac
data/: Makefile.am  location.desktop
debian/: changelog  control
src/: Makefile.am  location-status.c  location-status.desktop  location-status.h
